# Xalm

./: .clang-format  CMakeLists.txt  Makefile  convert.py  quants.py  requirements.txt
src/: XalmFile.h  buffer.h  console.h  debug.cpp  debug.h  hash.h  infer.cpp  main.cpp  model.cpp  model.h  profiler.cpp  profiler.h  sampler.cpp  sampler.h  stats.h  table.h  task_pool.h  tensor.cpp  tensor.h  test.cpp  tokenizer.cpp  tokenizer.h  types.h  types2.h  xalm.h
